--- a/Bookmark-landing-Page-Group-A/style.css
+++ b/Bookmark-landing-Page-Group-A/style.css
@@ -4,6 +4,76 @@
     font-family: Rubik;
 }
 
+
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 100px;
+}
+ul li {
+    display: inline-block;
+    list-style-type: none;
+}
+ul li a {
+    text-decoration: none;
+    padding: 10px;
+    color:  hsl(229, 31%, 21%);
+}
+ul li a:hover {
+    background-color: red;
+    padding: 5px 20px;
+    color: #fff;
+   
+   text-align: center;
+}
+
+
+@media only screen and (max-width: 375px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text {
+        margin-top: 20px;
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    ul li {
+        margin: 10px;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text {
+        margin-top: 20px;
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    ul li {
+        margin: 20px;
+    }
+}
+
+
+
+
 h1{
     font-size: 40px;
     color: hsl(229, 31%, 21%);;
@@ -57,7 +127,7 @@ p{
     grid-area: "Top";
 }
 
-img{
+.larny{
     position: absolute;
     top: 0px;
     left: 0px;
